--- a/web/index.html
+++ b/web/index.html
@@ -47,6 +47,13 @@
   firebase.analytics();
 </script>
 
+<script>
+    function upgradeApp() {
+    location.reload(true);
+    // window.location.href = window.location.href;
+    console.log("reloaded?");}
+</script>
+
 <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
