--- a/web/index.html
+++ b/web/index.html
@@ -49,6 +49,9 @@
 
 <script>
     function upgradeApp() {
+    if ('serviceWorker' in navigator) {
+       navigator.serviceWorker.getRegistration().then(swr => {swr.unregister()});
+    }
     location.reload(true);
     // window.location.href = window.location.href;
     console.log("reloaded?");}
